<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sara.mysimplemath.fragment.LessonsFragment"
    android:background="@drawable/background_main">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/button_lessons_derivations"
            android:layout_width="126dp"
            android:layout_height="72dp"
            android:background="@drawable/button"
            android:fontFamily="casual"
            android:onClick="openDerivations"
            android:text="@string/derivations"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_lessons_functions"
            android:layout_marginLeft="70dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/button_lessoona_integrals"
            android:layout_width="130dp"
            android:layout_height="74dp"
            android:background="@drawable/button"
            android:fontFamily="casual"
            android:onClick="openIntegrals"
            android:text="@string/integrals"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_lessons_derivations"
            android:layout_marginRight="52dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button_lessons_functions"
            android:layout_width="115dp"
            android:layout_height="74dp"
            android:background="@drawable/button"
            android:fontFamily="casual"
            android:onClick="openFunctions"
            android:text="@string/functions"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button_lessons_equations"
            android:layout_marginRight="68dp"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button_lessons_equations"
            android:layout_width="121dp"
            android:layout_height="75dp"
            android:background="@drawable/button"
            android:fontFamily="casual"
            android:onClick="openEquations"
            android:text="@string/equations"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_Lessons"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.226" />

        <TextView
            android:id="@+id/textView_Lessons"
            android:layout_width="261dp"
            android:layout_height="74dp"
            android:background="@drawable/background_blur"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:text="@string/nav_lessons"
            android:textColor="#000000"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="58dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
