<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_num"
    tools:context="com.example.sara.mysimplemath.fragment.EquationsFragment">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ViewEquationDef"
        android:layout_width="335dp"
        android:layout_height="204dp"
        android:text="@string/equation_definition"
        android:textColor="#000000"
        android:layout_marginTop="32dp"
        android:textSize="15dp"
        android:gravity="center_vertical"
        android:background="@drawable/background_view_def"
        app:layout_constraintTop_toBottomOf="@+id/textViewEquation"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.51" />

    <Button
        android:id="@+id/button_equations_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:background="@drawable/button"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="62dp" />

    <TextView
        android:id="@+id/textViewWhatIsEquat"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:layout_marginTop="47dp"
        android:fontFamily="casual"
        android:text="@string/what_is_equat"
        android:background="@drawable/background_view_def"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEquation"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:text="@string/equation"
        android:textSize="25dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/background_view_def"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewWhatIsEquat"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />
</android.support.constraint.ConstraintLayout>


</FrameLayout>
