<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_num"
    tools:context="com.example.sara.mysimplemath.activity.ResultsOfGameActivity">

    <TextView
        android:id="@+id/textView_win_or_lose"
        android:layout_width="218dp"
        android:background="@drawable/background_view_def"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_view_win_lose"
        android:textSize="35dp"
        android:textStyle="bold"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.497" />

    <TextView
        android:id="@+id/textView_your_score"
        android:layout_width="155dp"
        android:background="@drawable/background_view_def"
        android:layout_height="47dp"
        android:layout_marginTop="22dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/your_score"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_win_or_lose"
        app:layout_constraintHorizontal_bias="0.497" />

    <TextView
        android:id="@+id/textView_this_players_points"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/background_view_def"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_your_score" />

    <TextView
        android:id="@+id/textView_teammates_score"
        android:layout_width="207dp"
        android:layout_height="47dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/background_view_def"
        android:gravity="center"
        android:text="@string/teammates_score"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_this_players_points" />

    <TextView
        android:id="@+id/textView_teammates_points"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_view_def"
        android:gravity="center"
        android:text="TextView"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_teammates_score" />

    <Button
        android:id="@+id/button_resluts_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginRight="31dp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:onClick="exit"
        android:background="@drawable/button"
        android:text="@string/results_ok"
        android:visibility="invisible"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewPleaseWait"
        android:layout_width="224dp"
        android:layout_height="62dp"
        android:text="@string/pleaseWait"
        android:background="@drawable/background_view_def"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="85dp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/textViewYourTime"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/background_view_def"
        android:text="@string/your_time"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_this_players_points"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textViewPlayerTime"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:background="@drawable/background_view_def"
        android:layout_marginTop="5dp"
        android:text="TextView"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYourTime"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/textViewTeammatesTime"
        android:layout_width="204dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_view_def"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:text="@string/teammates_time"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_teammates_points" />

    <TextView
        android:id="@+id/textViewTeamTime"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_view_def"
        android:gravity="center"
        android:text="TextView"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTeammatesTime" />
</android.support.constraint.ConstraintLayout>
