<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_num"
    tools:context="com.example.sara.mysimplemath.fragment.FunctionsFragment">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewWhatIsFunction"
        android:layout_width="217dp"
        android:layout_height="59dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/background_view_def"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/what_is_function"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="92dp" />

    <Button
        android:id="@+id/button_functions_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:background="@drawable/button"
        android:layout_marginRight="41dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="86dp" />

    <TextView
        android:id="@+id/textViewFunctionDefinition"
        android:layout_width="313dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="49dp"
        android:textColor="#000000"
        android:textSize="15dp"
        android:gravity="center_vertical"
        android:background="@drawable/background_view_def"
        android:text="@string/function_definition"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWhatIsFunction"
        app:layout_constraintRight_toRightOf="@+id/textViewWhatIsFunction"
        app:layout_constraintTop_toBottomOf="@+id/textViewWhatIsFunction" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="178dp"
        android:layout_height="179dp"
        android:background="@drawable/background_view_def"
        app:srcCompat="@drawable/function_def"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewFunctionDefinition"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewFunctionDefinition" />
</android.support.constraint.ConstraintLayout>


</FrameLayout>
