<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_num"
    tools:context="com.example.sara.mysimplemath.fragment.IntegralsFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewWhatisIntegral"
            android:layout_width="229dp"
            android:layout_height="49dp"
            android:fontFamily="casual"
            android:textSize="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/what_is_integ"
            android:background="@drawable/background_view_def"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="43dp"
            tools:layout_editor_absoluteY="25dp" />

    <Button
        android:id="@+id/button_integrals_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:background="@drawable/button"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="69dp" />

        <TextView
            android:id="@+id/textViewIntegralDef"
            android:layout_width="332dp"
            android:layout_height="230dp"
            android:text="@string/integral_definition"
            android:textColor="#000000"
            android:textSize="15dp"
            android:gravity="center_vertical"
            android:background="@drawable/background_view_def"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewWhatisIntegral"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="226dp"
            android:layout_height="163dp"
            app:srcCompat="@drawable/integral_def"
            android:background="@drawable/background_view_def"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewIntegralDef"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/textViewIntegralDef" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
